Add vale; clean typos

--- a/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
+++ b/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
@@ -30,7 +30,7 @@
   - **"securedPath"** *\[mandatory\]*- A boolean - when you run a
     path simulation, you can tell IP Fabric if you want to stop when
     it hits a security policy which blocks the traffic in question
-    (true) or complete the forwarding paht and simply highlight the
+    (true) or complete the forwarding path and simply highlight the
     policy enforcement point (false)
 
   - **“ttl”** _\[mandatory\]_- integer - Time-to-live value (default
