--- a/docs/IP_Fabric_API/Path_Lookup_4.x/4.0-2_unicast_path_lookup.md
+++ b/docs/IP_Fabric_API/Path_Lookup_4.x/4.0-2_unicast_path_lookup.md
@@ -47,7 +47,7 @@
   - **"securedPath"** *\[mandatory\]*- A boolean - when you run a
     path simulation, you can tell IP Fabric if you want to stop when
     it hits a security policy which blocks the traffic in question
-    (true) or complete the forwarding paht and simply highlight the
+    (true) or complete the forwarding path and simply highlight the
     policy enforcement point (false)
 
 !!! example Example minimal request body
