Fix vale errors

--- a/docs/IP_Fabric_API/Path_Lookup_4.x/4.0-2_unicast_path_lookup.md
+++ b/docs/IP_Fabric_API/Path_Lookup_4.x/4.0-2_unicast_path_lookup.md
@@ -1,50 +1,44 @@
-# 4.0-2 Unicast Path Lookup
+# 4.0.2 Unicast Path Lookup
 
 ## Request Parameters
 
-- **"parameters"** *\[mandatory\]*- A nested JSON data structure with
+- `parameters` *\[mandatory\]* - A nested JSON data structure with
   keys
 
-  - **"type"** *\[mandatory\]* - A quoted string with a value of
-    "pathLookup" for an E2E path simulation output
+  - `type` *\[mandatory\]* - A quoted string with a value of `pathLookup` for an E2E path simulation output
 
-  - **"pathLookupType"** *\[mandatory\]* - A quoted string
-    containing the word "unicast" or "multicast" depending which
-    type of path simulation you're wanting to execute
+  - `pathLookupType` *\[mandatory\]* - A quoted string containing the word `unicast` or `multicast` depending which type of path simulation you're wanting to execute
 
-  - **"protocol"** *\[mandatory\]* - A quoted string with a value of
-    "tcp", "udp", "icmp"
+  - `protocol` *\[mandatory\]* - A quoted string with a value of `tcp`, `udp`, `icmp`
 
-  - **“vrf”** _\[optional\] -_ A quoted string containing the VRF
+  - `vrf` *\[optional\]* - A quoted string containing the VRF
     identifier required
 
-  - **“flags”** _\[optional\]_ - an array of TCP flags to be set in
+  - `flags` *\[optional\]* - an array of TCP flags to be set in
     the simulated path
 
-  - **"startingPoint"** *\[mandatory\]*- A quoted string containing
+  - `startingPoint` *\[mandatory\]* - A quoted string containing
     the source IP address
 
-  - **"startingPort"** *\[mandatory\]*- An integer representing the
+  - `startingPort` *\[mandatory\]* - An integer representing the
     source port
 
-  - **"destinationPoint"** *\[mandatory\]*- A quoted string
+  - `destinationPoint` *\[mandatory\]* - A quoted string
     containing the destination IP address
 
-  - **"destinationPort"** *\[mandatory\]*- An integer representing
+  - `destinationPort` *\[mandatory\]* - An integer representing
     the destination port
 
-  - **"groupBy"** *\[mandatory\]*- A quoted string representing the
-    grouping of devices in the output - at this time one of
-    "siteName", "routingDomain" or "stpDomain"
+  - `groupBy` *\[mandatory\]* - A quoted string representing the grouping of devices in the output - at this time one of `siteName`, `routingDomain` or `stpDomain`
 
-  - **"networkMode"** *\[mandatory\]*- A boolean - the new version
+  - `networkMode` *\[mandatory\]* - A boolean - the new version
     of IP Fabric allows you to simulate paths between subnets.
     Setting this key to true means that you will create a single
     result representing the subnets; false means that IP Fabric will
     create a separate path for each source or destination in the
     range of addresses up to a maximum of 255.
 
-  - **"securedPath"** *\[mandatory\]*- A boolean - when you run a
+  - `securedPath` *\[mandatory\]* - A boolean - when you run a
     path simulation, you can tell IP Fabric if you want to stop when
     it hits a security policy which blocks the traffic in question
     (true) or complete the forwarding path and simply highlight the
