--- a/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
+++ b/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
@@ -2,102 +2,98 @@
 
 ## Request Parameters
 
-- **"parameters"** *\[mandatory\]*- A nested JSON data structure with
+- `parameters` *\[mandatory\]* - A nested JSON data structure with
   keys
 
-  - **"type"** *\[mandatory\]* - A quoted string with a value of
-    "pathLookup" for an E2E path simulation output
+  - `type` *\[mandatory\]* - A quoted string with a value of
+    `pathLookup` for an E2E path simulation output
 
-  - **"pathLookupType"** *\[mandatory\]* - A quoted string
-    containing the word "multicast"
+  - `pathLookupType` *\[mandatory\]* - A quoted string
+    containing the word `multicast`
 
-  - **"protocol"** *\[mandatory\]* - A quoted string with a value of
-    "tcp", "udp", "icmp"
+  - `protocol` *\[mandatory\]* - A quoted string with a value of
+    `tcp`, `udp`, `icmp`
 
-  - **"source"** *\[mandatory\]*- A quoted string containing the
+  - `source` *\[mandatory\]* - A quoted string containing the
     source IP address
 
-  - **"group"** *\[mandatory\]*- A quoted string containing the
+  - `group` *\[mandatory\]* - A quoted string containing the
     group IP address
 
-  - **"receiver"** *\[optional\]*- A quoted string containing the
+  - `receiver` *\[optional\]* - A quoted string containing the
     receiver’s IP address
 
-  - **"groupBy"** *\[mandatory\]*- A quoted string representing the
+  - `groupBy` *\[mandatory\]* - A quoted string representing the
     grouping of devices in the output - at this time one of
-    "siteName", "routingDomain" or "stpDomain"
+    `siteName`, `routingDomain` or `stpDomain`
 
-  - **"securedPath"** *\[mandatory\]*- A boolean - when you run a
+  - `securedPath` *\[mandatory\]* - A boolean - when you run a
     path simulation, you can tell IP Fabric if you want to stop when
     it hits a security policy which blocks the traffic in question
-    (true) or complete the forwarding path and simply highlight the
-    policy enforcement point (false)
+    (`true`) or complete the forwarding path and simply highlight the
+    policy enforcement point (`false`)
 
-  - **“ttl”** _\[mandatory\]_- integer - Time-to-live value (default
-    is 128)
+  - `ttl` *\[mandatory\]* - integer - Time-to-live value (default
+    is `128`)
 
-  - **“fragmentOffset”** _\[mandatory\]_- integer - Fragment offset
-    value (default is 0)
+  - `fragmentOffset` *\[mandatory\]* - integer - Fragment offset
+    value (default is `0`)
 
-  - **“srcRegions”** _\[mandatory\]_- string - (default “.\*”)
+  - `srcRegions` *\[mandatory\]* - string - (default `.\*`)
 
-  - **“dstRegions”** _\[mandatory\]_- string - (default “.\*”)
+  - `dstRegions` *\[mandatory\]* - string - (default `.\*`)
 
-  - **“otherOptions”** _\[mandatory\]_- nested JSON data
+  - `otherOptions` *\[mandatory\]* - nested JSON data
 
-    - **“applications”** _\[mandatory\]_- string - (default “.\*”)
+    - `applications` *\[mandatory\]* - string - (default `.\*`)
 
-    - **“tracked”** _\[mandatory\]- boolean - (default false)_
+    - `tracked` *\[mandatory\]* - boolean - (default `false`)
 
-  - **“firstHopAlgorithm”** _\[mandatory\]_- nested JSON data
+  - `firstHopAlgorithm` *\[mandatory\]* - nested JSON data
 
-    - **“type” ** _\[mandatory\]_- Either “automatic” or
-      “userDefined”
+    - `type` *\[mandatory\]* - Either `automatic` or
+      `userDefined`
 
-    - **“vrf” ** _\[Optional and if type == automatic\]_
+    - `vrf` *\[Optional and if type == `automatic`\]*
 
-    - **“entryPoints” ** _\[mandatory and if type ==
-      userDefined\]_ - nested array of JSON data
+    - `entryPoints` *\[mandatory\]* - if type == `userDefined` it is nested array of JSON data
 
-      - **“hostname”** _\[mandatory\]-_ Hostname string
+      - `hostname` *\[mandatory\]* - Hostname string
 
-      - **“sn”** _\[mandatory\]-_ IP Fabric Unique Serial Number
-        string
+      - `sn` *\[mandatory\]* - IP Fabric Unique Serial Number string
 
-      - **“iface”** _\[mandatory\]-_ Interface name
+      - `iface` *\[mandatory\]* - Interface name
 
-  - **“l4Options”** _\[mandatory\]_ - nested JSON data
+  - `l4Options` *\[mandatory\]* - nested JSON data
 
-    - If **protocol = tcp**
+    - If `protocol` is `tcp`
 
-      - **"srcPorts"** *\[mandatory\]*- A string representing
-        ports; ex. “80,443,1025-4096”
+      - `srcPorts` *\[mandatory\]* - A string representing
+        ports; ex. `80,443,1025-4096`
 
-      - **"dstPorts"** *\[mandatory\]*- A string representing
-        ports; ex. “80,443,1025-4096”
+      - `dstPorts` *\[mandatory\]* - A string representing
+        ports; ex. `80,443,1025-4096`
 
-      - **“flags”** _\[mandatory\]_ - An array of TCP flags to
+      - `flags` *\[mandatory\]* - An array of TCP flags to
         be set in the simulated path or empty array
 
         - Valid flags:
-          `["ack", "fin", "psh", "rst", "syn", "urg"]`
+          [`ack`, `fin`, `psh`, `rst`, `syn`, `urg`]
 
-    - If **protocol = udp**
+    - If `protocol` is `udp`
 
-      - **"srcPorts"** *\[mandatory\]*- A string representing
-        ports; ex. “80,443,1025-4096”
+      - `srcPorts` *\[mandatory\]* - A string representing
+        ports; ex. `80,443,1025-4096`
 
-      - **"dstPorts"** *\[mandatory\]*- An integer representing
+      - `dstPorts` *\[mandatory\]* - An integer representing
         the destination port
 
-    - If **protocol = icmp** refer to: [API Tech Note - Path
-      Lookup ICMP
-      Decoder](/IP_Fabric_API/API_Tech_Note_-_4.x_Path_Lookup/API_Tech_Note_-_Path_Lookup_ICMP_Decoder/)
+    - If `protocol` is `icmp` refer to: [Path Lookup ICMP Decoder](path_lookup_ICMP_decoder)
 
-      - **“type”** _\[mandatory\]_- An integer representing the
+      - `type` *\[mandatory\]* - An integer representing the
         ICMP type
 
-      - **“code”** _\[mandatory\]_- An integer representing the
+      - `code` *\[mandatory\]* - An integer representing the
         ICMP code
 
 !!! example Example minimal request body
