PM-213: Fetch issues for DOS as well

--- a/docs/releases/low-level_release_notes/4.2.x/4.2.0.md
+++ b/docs/releases/low-level_release_notes/4.2.x/4.2.0.md
@@ -1,6 +1,6 @@
 # LLRN 4.2.0
 
-These are low-level release notes for IP Fabric release `4.2.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 187 issues. And was internally released on 2021-12-20.
+These are low-level release notes for IP Fabric release `4.2.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 188 issues. And was internally released on 2021-12-20.
 
 ## Stories
 
@@ -107,3 +107,4 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [NIM-6424](https://ipfabric.atlassian.net/browse/NIM-6424) -- Medium -- Pathlookup framework - new tests
 - [NIM-6428](https://ipfabric.atlassian.net/browse/NIM-6428) -- Medium -- IP Fabric is trying telnet while running configuration management
 - [NIM-6450](https://ipfabric.atlassian.net/browse/NIM-6450) -- Highest -- Error list
+- [DOS-174](https://ipfabric.atlassian.net/browse/DOS-174) -- Medium -- Set timezone to UTC
