--- a/docs/releases/low-level_release_notes/4.3.x/4.3.0.md
+++ b/docs/releases/low-level_release_notes/4.3.x/4.3.0.md
@@ -1,12 +1,13 @@
 # LLRN 4.3.0
 
-These are low-level release notes for IP Fabric release `4.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 494 issues. And was internally released on 2022-02-16.
+These are low-level release notes for IP Fabric release `4.3.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 495 issues. And was internally released on 2022-02-16.
 
 ## Epics
 
 Epics are high-level features, which may consist of many tasks.
 
 - [NIM-3294](https://ipfabric.atlassian.net/browse/NIM-3294) -- High -- Improve UX of handling app/network errors
+- [DOS-69](https://ipfabric.atlassian.net/browse/DOS-69) -- High -- Single-Sign-On (SSO) support via OpenID Connect (OIDC) in product
 
 ## Stories
 
