--- a/docs/releases/low-level_release_notes/4.4.x/4.4.0.md
+++ b/docs/releases/low-level_release_notes/4.4.x/4.4.0.md
@@ -1,6 +1,6 @@
 # LLRN 4.4.0
 
-These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 190 issues. And was internally released on 2022-04-11.
+These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 193 issues. And was internally released on 2022-04-11.
 
 ## Epics
 
@@ -109,3 +109,6 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [NIM-7391](https://ipfabric.atlassian.net/browse/NIM-7391) -- Medium -- Refactor AQL - use eIntL2IntL3
 - [NIM-7401](https://ipfabric.atlassian.net/browse/NIM-7401) -- Medium -- [API] Fix management changes endpoint to use snapshot shortcuts
 - [NIM-7403](https://ipfabric.atlassian.net/browse/NIM-7403) -- Medium -- Implement support for discontinuous masks in API
+- [DOS-152](https://ipfabric.atlassian.net/browse/DOS-152) -- Medium -- Provide basic syslog configuration for a new target
+- [DOS-302](https://ipfabric.atlassian.net/browse/DOS-302) -- Medium -- Fix AWS permissions for new LABs
+- [DOS-319](https://ipfabric.atlassian.net/browse/DOS-319) -- Highest -- Update of API breaks manual SSO configuration
