--- a/docs/releases/low-level_release_notes/4.3.x/4.3.2.md
+++ b/docs/releases/low-level_release_notes/4.3.x/4.3.2.md
@@ -1,6 +1,6 @@
 # LLRN 4.3.2
 
-These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 14 issues. And was internally released on 2022-02-23.
+These are low-level release notes for IP Fabric release `4.3.2`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 15 issues. And was internally released on 2022-02-23.
 
 ## Bugs
 
@@ -17,6 +17,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 - [NIM-7279](https://ipfabric.atlassian.net/browse/NIM-7279) -- Medium -- Bugfix: commands/mikrotik/_routeros/interface - Tesco (4.3.1+1)
 - [NIM-7295](https://ipfabric.atlassian.net/browse/NIM-7295) -- Highest -- Airbus 4.2.0 migration to 4.3.2+1 fail
 - [NIM-7298](https://ipfabric.atlassian.net/browse/NIM-7298) -- Highest -- Can't show graph with hidden transit or clouds
+- [DOS-363](https://ipfabric.atlassian.net/browse/DOS-363) -- Highest -- Jumphosts on 4.3.1 release does not seem to work
 
 ## Tasks
 
