ST-84 Fixing internal links to point to `.md` so they are tracked by `mkdocs`

--- a/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
+++ b/docs/IP_Fabric_API/Path_Lookup_4.x/4.3_multicast_path_lookup.md
@@ -88,7 +88,7 @@
       - `dstPorts` *\[mandatory\]* - An integer representing
         the destination port
 
-    - If `protocol` is `icmp` refer to: [Path Lookup ICMP Decoder](path_lookup_ICMP_decoder)
+    - If `protocol` is `icmp` refer to: [Path Lookup ICMP Decoder](path_lookup_ICMP_decoder.md)
 
       - `type` *\[mandatory\]* - An integer representing the
         ICMP type
