--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
@@ -7,8 +7,8 @@ These are low-level release notes for IP Fabric release `4.4.3`. Please note, th
 Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
 
 - [NIM-7934](https://ipfabric.atlassian.net/browse/NIM-7934) -- High -- Low Level Design Report is not having EoL dates correct
-- [NIM-7935](https://ipfabric.atlassian.net/browse/NIM-7935) -- High -- Carrier/E2E path not correct over Viptela
-- [NIM-7936](https://ipfabric.atlassian.net/browse/NIM-7936) -- Medium -- Carrier/Switching E2E source and dest doesn't bring expected results
+- [NIM-7935](https://ipfabric.atlassian.net/browse/NIM-7935) -- High -- E2E path not correct over Viptela
+- [NIM-7936](https://ipfabric.atlassian.net/browse/NIM-7936) -- Medium -- Switching E2E source and dest doesn't bring expected results
 - [NIM-8009](https://ipfabric.atlassian.net/browse/NIM-8009) -- Highest -- GC of data in Redis is misbehaving / needs investigation
 - [NIM-8091](https://ipfabric.atlassian.net/browse/NIM-8091) -- Highest -- Devices already in the queue
 - [DOS-484](https://ipfabric.atlassian.net/browse/DOS-484) -- Medium -- Shell injection via backup password [Was: Any password containing # is making backup SFTP URL invalid]
