LLRN NAE cleanup

--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.0.md
@@ -60,7 +60,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 - [NIM-5525](https://ipfabric.atlassian.net/browse/NIM-5525) -- Low -- Missing ZoneFW rules on Checkpoint
 - [NIM-5576](https://ipfabric.atlassian.net/browse/NIM-5576) -- Low -- Transceivers cmds on FortiGate likely don't work on VDOM enabled firewalls
 - [NIM-5599](https://ipfabric.atlassian.net/browse/NIM-5599) -- Medium -- Add warning into CSR page that new CSR invalidates old certificates
-- [NIM-5673](https://ipfabric.atlassian.net/browse/NIM-5673) -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/sdWanSites - BP plc (3.8.2)
+- [NIM-5673](https://ipfabric.atlassian.net/browse/NIM-5673) -- Medium -- Bugfix: commands/versa/_vos/vnms/dashboard/appliance/sdWanSites
 - [NIM-5681](https://ipfabric.atlassian.net/browse/NIM-5681) -- Low -- Table columns with bind flag allow operators despite not using them
 - [NIM-5713](https://ipfabric.atlassian.net/browse/NIM-5713) -- Medium -- API build fails to run worker threads
 - [NIM-5738](https://ipfabric.atlassian.net/browse/NIM-5738) -- Medium -- Include newly displayed nodes in user-defined saved layout
