--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
@@ -22,26 +22,26 @@ Anything what we considered an incorrect behavior. Something what was not workin
 - [NIM-5466](https://ipfabric.atlassian.net/browse/NIM-5466) -- Highest -- Vendor API - correct error msg
 - [NIM-6073](https://ipfabric.atlassian.net/browse/NIM-6073) -- Medium -- Missing phones in graphs
 - [NIM-6171](https://ipfabric.atlassian.net/browse/NIM-6171) -- Medium -- ArubaCX - add AAA support
-- [NIM-6496](https://ipfabric.atlassian.net/browse/NIM-6496) -- Medium -- Bugfix: commands/cisco/acl - stonex (4.0.2)
+- [NIM-6496](https://ipfabric.atlassian.net/browse/NIM-6496) -- Medium -- Bugfix: commands/cisco/acl
 - [NIM-6773](https://ipfabric.atlassian.net/browse/NIM-6773) -- High -- Connectivity Report - Rediscovry - Sellect All
 - [NIM-6778](https://ipfabric.atlassian.net/browse/NIM-6778) -- High -- technology/routing/path-verifications - Add Path button
 - [NIM-6785](https://ipfabric.atlassian.net/browse/NIM-6785) -- Medium -- Juniper Junos - Route Instance Detail private tables filtering
 - [NIM-6843](https://ipfabric.atlassian.net/browse/NIM-6843) -- Highest -- Global tables should always be displayed
 - [NIM-6845](https://ipfabric.atlassian.net/browse/NIM-6845) -- Low -- Snapshot Management - ADD action vs Vendor API settings
-- [NIM-7009](https://ipfabric.atlassian.net/browse/NIM-7009) -- Medium -- Bugfix: commands/cisco/_viptela/v1/arp - Raiffeisenbank (4.2.0)
-- [NIM-7010](https://ipfabric.atlassian.net/browse/NIM-7010) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/neighbors - Raiffeisenbank (4.2.0)
-- [NIM-7011](https://ipfabric.atlassian.net/browse/NIM-7011) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/summary - Raiffeisenbank (4.2.0)
-- [NIM-7012](https://ipfabric.atlassian.net/browse/NIM-7012) -- Medium -- Bugfix: commands/cisco/_viptela/v1/hardware/inventory - Raiffeisenbank (4.2.0)
-- [NIM-7013](https://ipfabric.atlassian.net/browse/NIM-7013) -- Medium -- Bugfix: commands/cisco/_viptela/v1/interface - Raiffeisenbank (4.2.0)
-- [NIM-7014](https://ipfabric.atlassian.net/browse/NIM-7014) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/interface - Raiffeisenbank (4.2.0)
-- [NIM-7015](https://ipfabric.atlassian.net/browse/NIM-7015) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor - Raiffeisenbank (4.2.0)
-- [NIM-7016](https://ipfabric.atlassian.net/browse/NIM-7016) -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp - Raiffeisenbank (4.2.0)
-- [NIM-7055](https://ipfabric.atlassian.net/browse/NIM-7055) -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services - Home Credit International (4.1.1)
+- [NIM-7009](https://ipfabric.atlassian.net/browse/NIM-7009) -- Medium -- Bugfix: commands/cisco/_viptela/v1/arp
+- [NIM-7010](https://ipfabric.atlassian.net/browse/NIM-7010) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/neighbors
+- [NIM-7011](https://ipfabric.atlassian.net/browse/NIM-7011) -- Medium -- Bugfix: commands/cisco/_viptela/v1/bgp/summary
+- [NIM-7012](https://ipfabric.atlassian.net/browse/NIM-7012) -- Medium -- Bugfix: commands/cisco/_viptela/v1/hardware/inventory
+- [NIM-7013](https://ipfabric.atlassian.net/browse/NIM-7013) -- Medium -- Bugfix: commands/cisco/_viptela/v1/interface
+- [NIM-7014](https://ipfabric.atlassian.net/browse/NIM-7014) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/interface
+- [NIM-7015](https://ipfabric.atlassian.net/browse/NIM-7015) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor
+- [NIM-7016](https://ipfabric.atlassian.net/browse/NIM-7016) -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp
+- [NIM-7055](https://ipfabric.atlassian.net/browse/NIM-7055) -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services
 - [NIM-7193](https://ipfabric.atlassian.net/browse/NIM-7193) -- Medium -- nsx-t api wrong status code 400
 - [NIM-7194](https://ipfabric.atlassian.net/browse/NIM-7194) -- High -- Cisco StackWise Virtual
 - [NIM-7239](https://ipfabric.atlassian.net/browse/NIM-7239) -- Medium -- vmware NSX-T API no response for get method
 - [NIM-7254](https://ipfabric.atlassian.net/browse/NIM-7254) -- Highest -- Migration failed - vPathLookupCheck contains corrupted data
-- [NIM-7281](https://ipfabric.atlassian.net/browse/NIM-7281) -- Medium -- Bugfix: commands/mikrotik/_routeros/systemLoggingAction - Tesco (4.3.1+1)
+- [NIM-7281](https://ipfabric.atlassian.net/browse/NIM-7281) -- Medium -- Bugfix: commands/mikrotik/_routeros/systemLoggingAction
 - [NIM-7283](https://ipfabric.atlassian.net/browse/NIM-7283) -- Medium -- Rebuild version not collected for nx-os
 - [NIM-7313](https://ipfabric.atlassian.net/browse/NIM-7313) -- Medium -- Device Attributes - Column "Value" not filterable
 - [NIM-7316](https://ipfabric.atlassian.net/browse/NIM-7316) -- Medium -- Cloned Locked Snapshot shows Locked in Unloaded state
