ST-94_f5_network_session_timeout

--- a/docs/releases/known_issues/f5.md
+++ b/docs/releases/known_issues/f5.md
@@ -6,3 +6,13 @@
 
 **Result**: Commands `run util bash -c uptime` for device uptime and `run util bash -c "ntpq -np"` for NTP peer server communications will not run without
  [administration permissions.](https://api-u.f5.com/support/kb-articles/K10272?pdf)
+
+## Long timeout for command `show ltm virtual details`
+
+** Known Affected Software version**: All
+
+**Description**: Command `show ltm virtual details` may hang for a long time before sending any response back to the user and discovery process can be stopped.
+
+**Result**: Some F5 devices might not be discovered
+
+**Fix**: Test how long it takes to get data for this command via CLI and update [Network device session timeout](../../IP_Fabric_Settings/advanced/SSH_telnet.md) accordingly
