--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.3.md
@@ -112,19 +112,19 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 ### New Vendor Support
 
 - Added support for [Microsoft Azure Cloud
-  infrastructure](../../../IP_Fabric_Settings/advanced/Vendors_API/Azure_Networking.md)
-- Added support for [Silverpeak SD-WAN networks](../../../IP_Fabric_Settings/advanced/Vendors_API/Silver_Peak_SD-WAN.md)
-- Added support for [VMware NSX-T](../../../IP_Fabric_Settings/advanced/Vendors_API/VMware_NSX-T.md)
+  infrastructure](../../../../IP_Fabric_Settings/advanced/Vendors_API/Azure_Networking.md)
+- Added support for [Silverpeak SD-WAN networks](../../../../IP_Fabric_Settings/advanced/Vendors_API/Silver_Peak_SD-WAN.md)
+- Added support for [VMware NSX-T](../../../../IP_Fabric_Settings/advanced/Vendors_API/VMware_NSX-T.md)
 - Added support for Brocade FastIron
 
 ### New Features
 
 - Added Single sign-on (SSO), read how to set it up [Enabling SSO
-  Providers](../../../IP_Fabric_Settings/user_management/sso.md)
+  Providers](../../../../IP_Fabric_Settings/user_management/sso.md)
 - Device Attributes - the table is located in Settings / Device
   Attributes, where you can set attribute per device (SN) and the
   value for a specific attribute. [Device
-  Attributes](../../../IP_Fabric_Settings/device_attributes.md). We support following attributes
+  Attributes](../../../../IP_Fabric_Settings/device_attributes.md). We support following attributes
 
   - `siteName` - set a site name (location) for a specific
     device and in case you have enabled the
@@ -141,7 +141,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   - `routingDomain` - same as STP domain, but for Routing domain
 
 - Added support for [AWS Assume
-  Role](../../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md)
+  Role](../../../../IP_Fabric_Settings/advanced/Vendors_API/AWS_Amazon_Web_Services.md)
   that can be configured in Vendor API settings
 
 - Graphs - Path Lookup - Added simulation for Cloud / SD-WAN networks.
@@ -164,7 +164,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
   - unfortunately, all the above Path lookup changes cause a
     breaking change in the API request payload.
 
-  - See [Tech Notes for Path Lookup](../../../IP_Fabric_API/Path_Lookup_4.x/index.md)
+  - See [Tech Notes for Path Lookup](../../../../../IP_Fabric_API/Path_Lookup/)
 
 ### Features - Protocol and technology support
 
@@ -182,7 +182,7 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 
 ### Improvements
 
-- [Site Separation](../../../IP_Fabric_Settings/site_separation.md) has been rewritten, it respects Device Attributes
+- [Site Separation](../../../../IP_Fabric_Settings/site_separation.md) has been rewritten, it respects Device Attributes
   (see New Features)
   - there was added an algorithm to determine the site name based on
     SNMP location.
@@ -209,10 +209,10 @@ OVA SHA256SUM: 3d07c8f1a51497eae671a43130cbf536b7e7bdf9ae6ba9030ebc50c981328119
 - The date and time values are now displayed in ISO8601 format
 - Cisco Firepower - Change collecting data to use FMC API and add
   support for application rules: More [Dropping support for ACL on
-  Cisco Firepower](../../known_issues/cisco/Dropping_support_for_ACL_on_Cisco_Firepower.md)
+  Cisco Firepower](../../../known_issues/cisco/Dropping_support_for_ACL_on_Cisco_Firepower.md)
 - Added API endpoint POST `/v1/tables/management/snapshots` for the
   possibility to get information about all snapshots (loaded,
-  unloaded) via [API](../../../IP_Fabric_API/Path_Lookup_4.x/index.md)
+  unloaded) via [API](../../../../../IP_Fabric_API/Path_Lookup/)
 - Path Lookup inspector - cosmetic improvement of ACI endpoint lookup
   reporting
 - Path Lookup - Forwarding for explicit label 0 fix
