--- a/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
+++ b/docs/releases/release_notes/previous_releases/IP_Fabric_v4.x.x/4.0.md
@@ -39,7 +39,7 @@ OVA SHA256SUM: 045123c5ccfeeb0f89eb1af8fb6a1dd3de1d91a109f0024a281da2d788db6c40
 - Snapshot cannot be refreshed from the graph in this release. This
   function will come back in the following release 4.1.
 
-- API for pathlookup has changed see [API Documetation](../../../IP_Fabric_API/Path_Lookup_4.x/index.md)
+- API for pathlookup has changed see [API Documetation](../../../../../IP_Fabric_API/Path_Lookup/)
 
 ### Improvements
 
