--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.3.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.3.md
@@ -8,5 +8,5 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 - [NIM-7304](https://ipfabric.atlassian.net/browse/NIM-7304) -- Highest -- Snapshot loading - data preparation takes too long
 - [NIM-7308](https://ipfabric.atlassian.net/browse/NIM-7308) -- Highest -- By adjusting Snapshot settings, we overwrite Global settings
-- [NIM-7309](https://ipfabric.atlassian.net/browse/NIM-7309) -- Highest -- BP - Tasker finish fail
+- [NIM-7309](https://ipfabric.atlassian.net/browse/NIM-7309) -- Highest -- Tasker finish fail
 - [NIM-7314](https://ipfabric.atlassian.net/browse/NIM-7314) -- Highest -- Migration fails on "Cannot read property 'map' of undefined" when upgrading to 4.3.2+2
