--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.0.md
@@ -1,6 +1,6 @@
 # LLRN 4.4.0
 
-These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 193 issues. And was internally released on 2022-04-11.
+These are low-level release notes for IP Fabric release `4.4.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 195 issues. And was internally released on 2022-04-11.
 
 ## Epics
 
@@ -37,6 +37,8 @@ Anything what we considered an incorrect behavior. Something what was not workin
 - [NIM-7015](https://ipfabric.atlassian.net/browse/NIM-7015) -- Medium -- Bugfix: commands/cisco/_viptela/v1/ospf/neighbor
 - [NIM-7016](https://ipfabric.atlassian.net/browse/NIM-7016) -- Medium -- Bugfix: commands/cisco/_viptela/v1/vrrp
 - [NIM-7055](https://ipfabric.atlassian.net/browse/NIM-7055) -- Medium -- Bugfix: commands/cisco/_viptela/v1/omp/services
+- [NIM-7135](https://ipfabric.atlassian.net/browse/NIM-7135) -- High -- Webhooks - cut off select in modal
+- [NIM-7182](https://ipfabric.atlassian.net/browse/NIM-7182) -- High -- Broken buttons in Add Vendor dialog
 - [NIM-7193](https://ipfabric.atlassian.net/browse/NIM-7193) -- Medium -- nsx-t api wrong status code 400
 - [NIM-7194](https://ipfabric.atlassian.net/browse/NIM-7194) -- High -- Cisco StackWise Virtual
 - [NIM-7239](https://ipfabric.atlassian.net/browse/NIM-7239) -- Medium -- vmware NSX-T API no response for get method
@@ -60,7 +62,7 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [NIM-2989](https://ipfabric.atlassian.net/browse/NIM-2989) -- High -- Improve Support MATRIX portal
 - [NIM-4597](https://ipfabric.atlassian.net/browse/NIM-4597) -- Medium -- Extreme feature request for Extreme
 - [NIM-4713](https://ipfabric.atlassian.net/browse/NIM-4713) -- High -- Cisco - Licensing
-- [NIM-5459](https://ipfabric.atlassian.net/browse/NIM-5459) -- Low -- Support for LDAP StartTLS (Credit Agricole)
+- [NIM-5459](https://ipfabric.atlassian.net/browse/NIM-5459) -- Low -- Support for LDAP StartTLS
 - [NIM-5543](https://ipfabric.atlassian.net/browse/NIM-5543) -- High -- Add new table - Technology / Security / ACL / Global ACL policies
 - [NIM-5894](https://ipfabric.atlassian.net/browse/NIM-5894) -- Medium -- List portchannel interfaces without any members in the portchannels member status table
 - [NIM-6520](https://ipfabric.atlassian.net/browse/NIM-6520) -- High -- HP Aruba CX vxlan
@@ -94,7 +96,7 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [NIM-7232](https://ipfabric.atlassian.net/browse/NIM-7232) -- High -- Security - Discontinuous subnet masks (IPv4)
 - [NIM-7240](https://ipfabric.atlassian.net/browse/NIM-7240) -- Medium -- Remove MongoDB from the product
 - [NIM-7247](https://ipfabric.atlassian.net/browse/NIM-7247) -- High -- Create juniper mist API client
-- [NIM-7252](https://ipfabric.atlassian.net/browse/NIM-7252) -- High -- UI support for LDAP StartTLS (Credit Agricole)
+- [NIM-7252](https://ipfabric.atlassian.net/browse/NIM-7252) -- High -- UI support for LDAP StartTLS
 - [NIM-7301](https://ipfabric.atlassian.net/browse/NIM-7301) -- High -- Cisco Catalyst 9300/9200 switches - power supply and fans
 - [NIM-7302](https://ipfabric.atlassian.net/browse/NIM-7302) -- High -- Cisco Catalyst 9600 switches - power supply and fans
 - [NIM-7318](https://ipfabric.atlassian.net/browse/NIM-7318) -- High -- Full version of Font Awesome
@@ -107,8 +109,6 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [NIM-7381](https://ipfabric.atlassian.net/browse/NIM-7381) -- High -- License task - new tables
 - [NIM-7390](https://ipfabric.atlassian.net/browse/NIM-7390) -- Medium -- Improve logs when deleting a snapshot
 - [NIM-7391](https://ipfabric.atlassian.net/browse/NIM-7391) -- Medium -- Refactor AQL - use eIntL2IntL3
-- [NIM-7401](https://ipfabric.atlassian.net/browse/NIM-7401) -- Medium -- [API] Fix management changes endpoint to use snapshot shortcuts
-- [NIM-7403](https://ipfabric.atlassian.net/browse/NIM-7403) -- Medium -- Implement support for discontinuous masks in API
 - [DOS-152](https://ipfabric.atlassian.net/browse/DOS-152) -- Medium -- Provide basic syslog configuration for a new target
 - [DOS-302](https://ipfabric.atlassian.net/browse/DOS-302) -- Medium -- Fix AWS permissions for new LABs
 - [DOS-319](https://ipfabric.atlassian.net/browse/DOS-319) -- Highest -- Update of API breaks manual SSO configuration
