--- a/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
+++ b/docs/releases/low-level_release_notes/4.x/4.4.x/4.4.3.md
@@ -17,4 +17,4 @@ Anything what we considered an incorrect behavior. Something what was not workin
 
 A typical unit of work. They may be associated into Epics or Stories to form large features.
 
-- [NIM-7885](https://ipfabric.atlassian.net/browse/NIM-7885) -- High -- PoC HbG - Juniper SRX empty Zone FW table
+- [NIM-7885](https://ipfabric.atlassian.net/browse/NIM-7885) -- High -- Juniper SRX empty Zone FW table
