--- a/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
+++ b/docs/releases/low-level_release_notes/4.x/4.3.x/4.3.4.md
@@ -6,10 +6,10 @@ These are low-level release notes for IP Fabric release `4.3.4`. Please note, th
 
 Anything what we considered an incorrect behavior. Something what was not working as intended or turned out that does not meet customers demand.
 
-- [NIM-6871](https://ipfabric.atlassian.net/browse/NIM-6871) -- High -- HCL - Cannot load snapshot - F5 related issue
+- [NIM-6871](https://ipfabric.atlassian.net/browse/NIM-6871) -- High -- Cannot load snapshot - F5 related issue
 - [NIM-7255](https://ipfabric.atlassian.net/browse/NIM-7255) -- Medium -- ID seems to be required to create SiteSeparation rules
 - [NIM-7268](https://ipfabric.atlassian.net/browse/NIM-7268) -- High -- Missing devices in Virtual servers for F5
-- [NIM-7285](https://ipfabric.atlassian.net/browse/NIM-7285) -- Highest -- WeWork - Snapshot recalculations take 36 hours
+- [NIM-7285](https://ipfabric.atlassian.net/browse/NIM-7285) -- Highest -- Snapshot recalculations take 36 hours
 - [NIM-7300](https://ipfabric.atlassian.net/browse/NIM-7300) -- High -- MPLS information missing on vEdge e2e not working
 - [NIM-7306](https://ipfabric.atlassian.net/browse/NIM-7306) -- Medium -- LB seems to be in a site that has no devices
 - [NIM-7307](https://ipfabric.atlassian.net/browse/NIM-7307) -- Medium -- 2 devices that should be in L66 site based on inventory are in other random site in maps
@@ -17,7 +17,7 @@ Anything what we considered an incorrect behavior. Something what was not workin
 - [NIM-7331](https://ipfabric.atlassian.net/browse/NIM-7331) -- Highest -- tasks/validateDoc - add vmware to the techSupportList
 - [NIM-7332](https://ipfabric.atlassian.net/browse/NIM-7332) -- Highest -- Unable to load previously created topology views
 - [NIM-7338](https://ipfabric.atlassian.net/browse/NIM-7338) -- High -- Tasker finish - switch to router no cdp, trunk with tag
-- [NIM-7342](https://ipfabric.atlassian.net/browse/NIM-7342) -- High -- WeWork - tasker finish, calc vlan - fix cdp query runs too long
+- [NIM-7342](https://ipfabric.atlassian.net/browse/NIM-7342) -- High -- Tasker finish, calc vlan - fix cdp query runs too long
 - [NIM-7347](https://ipfabric.atlassian.net/browse/NIM-7347) -- Medium -- Cannot get OS version H3C S5100-26C-EI
 - [NIM-7348](https://ipfabric.atlassian.net/browse/NIM-7348) -- Highest -- Cannot detect Fortinet device FortiGate-3140B
 - [NIM-7354](https://ipfabric.atlassian.net/browse/NIM-7354) -- Highest -- IP Fabric is not sending traffic through the proxy
@@ -37,5 +37,5 @@ Anything what we considered an incorrect behavior. Something what was not workin
 A typical unit of work. They may be associated into Epics or Stories to form large features.
 
 - [NIM-7099](https://ipfabric.atlassian.net/browse/NIM-7099) -- Medium -- Cisco _aci folder
-- [NIM-7379](https://ipfabric.atlassian.net/browse/NIM-7379) -- Medium -- Failing CGI-4.1.0 end-to-end path-lookup test
-- [NIM-7380](https://ipfabric.atlassian.net/browse/NIM-7380) -- High -- Failing Schonfeld-4.1.0 end-to-end path-lookup test
+- [NIM-7379](https://ipfabric.atlassian.net/browse/NIM-7379) -- Medium -- Failing -4.1.0 end-to-end path-lookup test
+- [NIM-7380](https://ipfabric.atlassian.net/browse/NIM-7380) -- High -- Failing -4.1.0 end-to-end path-lookup test
