minor readability update

--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -64,7 +64,7 @@
 
 ### **UPGRADE NOTICES**
 
-- This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`. IPFabric `v4.4.2` will or lower will not work -– please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
+- This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`. IP Fabric `v4.4.2` or lower will not work -– please upgrade to `4.4.3` using the normal method before carrying out the `5.0.0` upgrade process.
 - Due to the major changes stated above, automatic updates will be disabled for this release and will require manual upgrade.
 - Prior to update please ensure you perform a [backup of your system](../../../System_Administration/Administrative_Interface/backup_and_restore/) or it is highly recommend to create a VM snapshot
 - It is recommended (for all updates) to unload all snapshots prior to performing the upgrade.
