--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -7,7 +7,7 @@
     Please read all UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
     This upgrade requires IP Fabric to be on `v4.4.3` prior to upgrade to `v5.0.0`.
 
-!!! warning ""
+!!! warning "API Versioning"
 
     API versioning has been introduced in v5.0.0. API endpoint URLs will now
     contain `api/v5.0` rather than `api/v1`. If you are scripting against the
@@ -49,7 +49,7 @@
     roles. If a user is in a custom Role they will not be able to create an API
     token until the next patch release.
 
-!!! important ""
+!!! important "Extreme Family Rename"
 
     Extreme `XOS` family has been correctly renamed to `EXOS`.
 
@@ -75,7 +75,7 @@
     - `tail -f /var/log/nimpee/dist_upgrade.log`
     - If `tail` command is not found wait a few minutes and log out and back into the CLI.
 - Once upgrade has finished the system will reboot (see below the example output of the `dist_upgrade.log` file).
-- After all updates please **Clear Browser Cache**.
+- After all updates please [**Clear Browser Cache**](../../).
 - Not all new features will be available until a new snapshot is created on the updated version.
 - If after the upgrade you experience issues with `AQL: internal error`, Dashboards, or Topology please first try restarting the `ArangoDB` service from the System Administrator page prior to contacting support.
     - Log into the System Administrator Page located or port `443`
