--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -24,8 +24,8 @@
 !!! warning "SSO and API versioning"
 
     Upgrade to `v5.0.0` will break custom SSO integrations an will require
-    changes to your files prior to re-enabling. Before upgrading and you have
-    SSO deployed please contact your Solution Architect to copy you custom
+    changes to your files prior to re-enabling. Before upgrading and if you have
+    SSO deployed please contact your Solution Architect to copy your custom
     settings and and re-deploy them after the update.
 
 !!! warning "Input validation"
