--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -2,6 +2,13 @@
 
 ## v5.0.0
 
+```shell
+OVA SHA256: ac8a7e68f97b53e299ce3eecac6bd4ddc56c2c025b1ae48d95fbad925213a7bd
+OVA MD5: 65e979f0ea93ba77c9731cfcc0008fa5
+QCOW SHA256: 1e681e249d69d21feb83cbc62f5e3d2bb80db76d22a3acfd90c840c30506748c
+QCOW MD5: 0204de624001d1dfe8067e68f11ef3c5
+```
+
 !!! warning "Read All Upgrade Notices"
 
     Please read all UPGRADE NOTICES, WARNINGS, and IMPORTANT messages prior to beginning installation.
