--- a/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
+++ b/docs/releases/low-level_release_notes/5.x/5.0.x/5.0.0.md
@@ -1,6 +1,6 @@
 # LLRN 5.0.0
 
-These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 624 issues. And was internally released on 2022-07-12.
+These are low-level release notes for IP Fabric release `5.0.0`. Please note, that this page contains very low-level information about the actual release, which can lead to false conclusions if you don't have access to the tickets. On the other hand we believe, that it can provide a valuable information, if you are looking for particular detail. This release of IP Fabric contains total of 629 issues. And was internally released on 2022-07-12.
 
 ## Epics
 
@@ -141,5 +141,6 @@ A typical unit of work. They may be associated into Epics or Stories to form lar
 - [DOS-559](https://ipfabric.atlassian.net/browse/DOS-559) -- Highest -- net-config removes nimpee-conf-required only when triggered in fist boot mode
 - [DOS-569](https://ipfabric.atlassian.net/browse/DOS-569) -- Medium -- make net-config work with IPF 5.0
 - [DOS-575](https://ipfabric.atlassian.net/browse/DOS-575) -- Low -- nimpee-install - validate that all user-replaceable/editable files are handled properly
-- [DOS-610](https://ipfabric.atlassian.net/browse/DOS-610) -- Medium -- Please open arango db to "the world"
+- [DOS-610](https://ipfabric.atlassian.net/browse/DOS-610) -- Medium -- Please let arango db listen on 0.0.0.0 in the product for debugging purposes
 - [DOS-629](https://ipfabric.atlassian.net/browse/DOS-629) -- High -- Do not enable discovery services during package installation
+- [DOS-672](https://ipfabric.atlassian.net/browse/DOS-672) -- Medium -- Promote ipf-appliance 5.0.0+47 versions to prod deb repository
