--- a/docs/releases/release_notes/5.0.md
+++ b/docs/releases/release_notes/5.0.md
@@ -1,6 +1,6 @@
 # IP Fabric v5.0
 
-## v5.0.0
+## v5.0.0 (Jul 19th, 2022)
 
 ```shell
 OVA SHA256: ac8a7e68f97b53e299ce3eecac6bd4ddc56c2c025b1ae48d95fbad925213a7bd
